--- a/css/style.css
+++ b/css/style.css
@@ -1,92 +1,86 @@
 /*
-COLORS:
+COLORS:*/
+@keyframes easeinout {
+  0% {
+    opacity: 0;
+    transform: translateX(-10rem); }
+  80% {
+    transform: translateX(2rem); }
+  100% {
+    opacity: 1;
+    transform: translateX(0rem); } }
 
-Light green: #7ed56f
-Medium green: #55c57a
-Dark green: #28b485
-
-*/
+@keyframes easeinright {
+  0% {
+    opacity: 0;
+    transform: translateX(10rem); }
+  80% {
+    transform: translateX(-2rem); }
+  100% {
+    opacity: 1;
+    transform: translateX(0rem); } }
 
 /* Best Practice */
-
 *,
 *::after,
 *::before {
   margin: 0;
   padding: 0;
-  box-sizing: inherit;
-}
+  box-sizing: inherit; }
 
 /* Overiding the default font size which is 16px to it's 62.5% which is 10px so we can just divide px by 10
 and assign it in rem */
-
 html {
-  font-size: 62.5%;
-}
+  font-size: 62.5%; }
 
 body {
   font-family: "Lato", sans-serif;
   font-weight: 400;
   line-height: 1.7;
   padding: 3rem;
-  box-sizing: border-box;
-}
-
-.header {
-  height: 95vh;
-  background: linear-gradient(to right, #7ed56fce, #28b485c4),
-    url(../img/hero.jpg);
-  background-size: cover;
-  clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
-  position: relative;
-}
-
-.header__logo-box {
-  position: absolute;
-  top: 4rem;
-  left: 4rem;
-}
-
-.header__logo {
-  height: 3.5rem;
-}
-
-/* Using position absolute does not disturb the surroundings and using top bottom left or right we can position
-the element in the relative positioned element */
-
-.header__text-box {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-}
+  box-sizing: border-box; }
 
 .heading-primary {
   color: #fff;
   text-transform: uppercase;
-  backface-visibility: hidden; /* Just to make the little shaky screen in animations go away*/
-}
+  backface-visibility: hidden;
+  /* Just to make the little shaky screen in animations go away*/ }
+  .heading-primary--main {
+    display: block;
+    font-size: 6rem;
+    font-weight: 400;
+    letter-spacing: 3.5rem;
+    animation: easeinout 1s; }
+  .heading-primary--sub {
+    display: block;
+    font-size: 2rem;
+    font-weight: 400;
+    letter-spacing: 1.7rem;
+    animation: easeinright 1s; }
 
-.heading-primary--main {
-  display: block;
-  font-size: 6rem;
-  font-weight: 400;
-  letter-spacing: 3.5rem;
-  animation: easeinout 1s;
-}
-
-.heading-primary--sub {
-  display: block;
-  font-size: 2rem;
-  font-weight: 400;
-  letter-spacing: 1.7rem;
-  animation: easeinright 1s;
-}
+.header {
+  height: 95vh;
+  background: linear-gradient(to right, #7ed56fbe, #28b485be), url(../img/hero.jpg);
+  background-size: cover;
+  clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
+  position: relative;
+  /* Using position absolute does not disturb the surroundings and using top bottom left or right we can position
+      the element in the relative positioned element */ }
+  .header__logo-box {
+    position: absolute;
+    top: 4rem;
+    left: 4rem; }
+  .header__logo {
+    height: 3.5rem; }
+  .header__text-box {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%); }
 
 a {
   text-align: center;
-  text-decoration: none;
-}
+  text-decoration: none; }
 
 .btn {
   display: block;
@@ -95,44 +89,11 @@ a {
   padding: 1.5rem;
   color: rgba(0, 0, 0, 0.438);
   transition: all 0.3s;
-  font-size: 1.6rem;
-}
-
-.btn--white {
-  background: #fff;
-  border-radius: 3rem;
-  margin-top: 2.5rem;
-  text-transform: uppercase;
-}
-
-.btn:active {
-  transform: translateY(0.5rem);
-}
-
-@keyframes easeinout {
-  0% {
-    opacity: 0;
-    transform: translateX(-10rem);
-  }
-  80% {
-    transform: translateX(2rem);
-  }
-  100% {
-    opacity: 1;
-    transform: translateX(0rem);
-  }
-}
-
-@keyframes easeinright {
-  0% {
-    opacity: 0;
-    transform: translateX(10rem);
-  }
-  80% {
-    transform: translateX(-2rem);
-  }
-  100% {
-    opacity: 1;
-    transform: translateX(0rem);
-  }
-}
+  font-size: 1.6rem; }
+  .btn--white {
+    background: #fff;
+    border-radius: 3rem;
+    margin-top: 2.5rem;
+    text-transform: uppercase; }
+  .btn:active {
+    transform: translateY(0.5rem); }
