--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -1,6 +1,12 @@
 $color-primary: #7ed56fbe;
-$color-primary--light: #55c57a;
+$color-primary-light: #55c57a;
 $color-primary-dark: #28b485be;
+
+$color-grey-light-1: #f7f7f7;
 
 $color-white: #fff;
 $color-dark: rgba(0, 0, 0, 0.438);
+
+$grid-width: 114rem;
+$gutter-vertical: 8rem;
+$gutter-horizontal: 6rem;
