Designed features layout

--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -5,8 +5,12 @@ $color-primary-dark: #28b485be;
 $color-grey-light-1: #f7f7f7;
 
 $color-white: #fff;
+$color-black: rgba(0, 0, 0, 0.338);
 $color-dark: rgba(0, 0, 0, 0.438);
 
 $grid-width: 114rem;
 $gutter-vertical: 8rem;
 $gutter-horizontal: 6rem;
+
+// Font
+$default-font-size: 1.6rem;
