--- a/sass/main.scss
+++ b/sass/main.scss
@@ -13,5 +13,6 @@ COLORS:*/
 @import "./layout/grid";
 
 @import "./components/button";
+@import "./components/composition";
 
 @import "./pages/home";
