--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -10,7 +10,7 @@ a {
   padding: 1.5rem;
   color: $color-dark;
   transition: all 0.3s;
-  font-size: 1.6rem;
+  font-size: $default-font-size;
 
   &--white {
     background: $color-white;
@@ -21,5 +21,28 @@ a {
 
   &:active {
     transform: translateY(0.5rem);
+  }
+}
+
+.btn-text {
+  &:link,
+  &:visited {
+    font-size: $default-font-size;
+    color: $color-primary;
+    display: inline-block;
+    text-decoration: none;
+    border-bottom: 1px solid $color-primary;
+    padding: 3px;
+  }
+
+  &:hover {
+    background-color: $color-primary;
+    color: $color-white;
+    box-shadow: 0 1rem 2rem rgba($color-black, 0.15);
+    transform: translateY(-2px);
+  }
+  &:active {
+    box-shadow: 0 0.5rem 1rem rgba($color-black, 0.15);
+    transform: translateY(0);
   }
 }
